gcc/testsuite/g++.dg/modules/ns-alias-1_c.C
// { dg-additional-options "-fmodules-ts" }

import foo;

elsewhere::det::bob j;
elsewhere::ail::bob k; // { dg-error "does not name a type" }
